trustfall_core/test_data/tests/parse_errors/invalid_transform_lacking_argument_for_add_op.parse-error.ron
Err(OtherError("Transform argument count mismatch: expected 1 but found 0", Pos(
  line: 5,
  column: 15,
)))
